test/tools/config/ContentType_expected.json
{
  "input": [
    {
      "expected": "local_service",
      "authority": "www.lyft.com",
      "path": "/"
    },
    {
      "expected": "local_service_grpc",
      "authority": "www.lyft.com",
      "path": "/",
      "additional_headers":[
	      { "name":"content-type", "value":"application/grpc"}
      ]
    },
    {
      "expected": "local_service",
      "authority": "www.lyft.com",
      "path": "/",
      "additional_headers":[
        { "name":"content-type", "value":"foo"}
      ]
    }
  ]
}
