test/tools/config/Redirect2_expected.json
{ "input": [
  {
    "expected": "none",
    "authority": "www.lyft.com",
    "path": "/foo",
    "check": {"redirect": "path"},
    "ssl": true,
    "internal": true
  },
  {
    "expected": "www2",
    "authority": "www.lyft.com",
    "path": "/foo",
    "ssl": true,
    "internal": true
  },
  {
    "expected": "http://new.lyft.com/foo",
    "authority": "redirect.lyft.com",
    "path": "/foo",
    "check": {"redirect": "path"},
    "ssl" : false,
    "internal": false
  },
  {
    "expected": "none",
    "authority": "redirect.lyft.com",
    "path": "/foo"
  }
]}
