test/tools/config/Redirect_expected.json
{ "input": [
  {
    "expected": "none",
    "authority": "www.foo.com",
    "path": "/foo",
    "check": {"redirect": "path"},
    "ssl": true,
    "internal": true
  },
  {
    "expected": "none",
    "authority": "www.lyft.com",
    "path": "/foo",
    "check": {"redirect": "path"},
    "ssl": true,
    "internal": true
  },
  {
    "expected": "https://www.lyft.com/foo",
    "authority": "www.lyft.com",
    "path": "/foo",
    "check": {"redirect": "path"},
    "ssl" : false,
    "internal": false
  },
  {
    "expected": "none",
    "authority": "api.lyft.com",
    "path": "/foo",
    "check": {"redirect": "path"},
    "internal": true
  },
  {
    "expected": "https://api.lyft.com/foo",
    "authority": "api.lyft.com",
    "path": "/foo",
    "check": {"redirect": "path"}
  },
  {
    "expected": "http://new.lyft.com/foo",
    "authority": "redirect.lyft.com",
    "path": "/foo",
    "check": {"redirect": "path"},
    "ssl" : false,
    "internal": false
  },
  {
    "expected": "https://redirect.lyft.com/new_bar",
    "authority": "redirect.lyft.com",
    "path": "/bar",
    "check": {"redirect": "path"},
    "ssl" : true
  },
  {
    "expected": "https://new.lyft.com/new_baz",
    "authority": "redirect.lyft.com",
    "path": "/baz",
    "check": {"redirect": "path"},
    "ssl" : true,
    "internal": false
  }

]}
